# interview_chat_bot

./: README.md  docker-compose.yml  package-lock.json  package.json
backend/: .env_template  Dockerfile  pyproject.toml
backend/app/: crud.py  db.py  google_ai.py  main.py  models.py  schemas.py
front_end/: Dockerfile  package-lock.json  package.json
front_end/src/: App.tsx  index.css  main.tsx
front_end/src/components/: chat-interface.tsx  generate-link.tsx  header.tsx  resume-upload.tsx
